<resources>
    <string name="app_name">Chat App</string>
    <string name="room_name">Room Name</string>
    <string name="date">12/01/2021 00:01</string>
    <string name="chat_message">Happy Birthday!!!</string>
    <string name="add_chat_room">Add Chat Room</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_list">Friend List</string>
    <string name="add_friend">add_friend</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="sign_in">Sign In</string>
    <string name="status">status</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">email</string>
    <string name="button_chat">Button Chat</string>
    <string name="button_avalanche_effect">Button Avalanche Effect</string>
    <string name="button_processing_time">Button Processing Time</string>
    <string name="button_about">Button About</string>
    <string name="add_message">Add Message</string>
    <string name="send">SEND</string>
    <string name="this_is_message">This is Message</string>
    <string name="image_message">Image Message</string>
    <string name="user_name">User Name</string>
    <string name="chat_app_logo">Chat App Logo</string>
    <string name="chat_room">Chat Room</string>
    <string name="avalanche_effect">Avalanche Effect</string>
    <string name="processing_time">Processing Time</string>
    <string name="about_app">About App</string>
    <string name="text">Text</string>
    <string name="count_time">Count Time</string>
    <string name="result">Result</string>
    <string name="not_set">Not Set</string>
    <string name="cipher_text">Ciphertext</string>
    <string name="sign">Sign</string>
    <string name="text_length">Text Length</string>
    <string name="encrypt_time">Encrypt Time</string>
    <string name="sign_time">Sign Time</string>
    <string name="send_time">Send Time</string>
    <string name="decrypt_time">Decrypt Time</string>
    <string name="verify_time">Verify Time</string>
    <string name="receive_time">Receive Time</string>
    <string name="text_a">Text A</string>
    <string name="text_b">Text B</string>
    <string name="chipertext_a">Ciphertext A</string>
    <string name="ciphertext_a">Ciphertext A</string>
    <string name="ciphertext_b">Ciphertext B</string>
    <string name="text_length_a">Text Length A</string>
    <string name="text_length_b">Text Length B</string>
    <string name="google_logo">Google Logo</string>
    <string name="teknik_informatika_universitas_sriwijaya">Teknik Informatika Universitas Sriwijaya</string>
    <string name="ahmad_emir_alfatah">Ahmad Emir Alfatah</string>
</resources>